added answers block

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 	</body>
 	<script>
 		pos   = 0;
-		cards = [{"tgt":"I ate [eɪt] in the morning", "ntv":"Я ел утром", "img":"ate2.png"},
-				{"tgt":"I ran [ræn] yesterday", "ntv":"Я бегал вчера", "img": "ran2.png"}];
+		cards = [{"tgt":"I ate [eɪt] in the morning", "ntv":"Я ел утром", "answers":["ate"], "img":"ate2.png"},
+				{"tgt":"I ran [ræn] yesterday", "ntv":"Я бегал вчера", "answers":["ran"], "img": "ran2.png"}];
 		
 	</script>
 </html>
