--- a/index.html
+++ b/index.html
@@ -7,17 +7,26 @@
 	</title>
 	</head>
 	<body>
-		<div id="textTopic">Irregular verbs</div><br>
-		<div id="textTgtLng"></div><br>
-		<div id="textNtvLng"></div><br>
-		<div id="image"></div><br>
-		<textarea id="txtAns" style="display: none"></textarea><br><br>
-		<div id="textRes"></div><br>
-		<button id="btnCheck"  onclick="check()" style="display: none">check</button><br>
-		<button id="btnTrain" onclick="loadTraining()" style="display: none">train</button><br>
-		<button id="btnNextMemo" onclick="nextCard()">next</button><br>
-		<button id="btnNextQst" onclick="nextQuestion()" style="display: none">next</button><br>
+		<div id="divTopicSelector">
+			<select id="topicSelector" size="1" >
+				
+			</select>
+			<button id="btnLoadTopic" onclick="loadSelectedTopic()">Load topic</button>
+		</div>
+		<div id="divTopic" style="display: none">
+			<div id="textTopic">Irregular verbs</div><br>
+			<div id="textTgtLng"></div><br>
+			<div id="textNtvLng"></div><br>
+			<div id="image"></div><br>
+			<textarea id="txtAns" style="display: none"></textarea><br><br>
+			<div id="textRes"></div><br>
+			<button id="btnCheck"  onclick="check()" style="display: none">check</button><br>
+			<button id="btnTrain" onclick="loadTraining()" style="display: none">train</button><br>
+			<button id="btnNextMemo" onclick="nextCard()">next</button><br>
+			<button id="btnNextQst" onclick="nextQuestion()" style="display: none">next</button><br>
+		</div>
 	</body>
+	<script src="topics.js"></script>
 	<script>
 		//DOM OBJECTS
 		topic    = document.getElementById("textTopic");
@@ -30,24 +39,25 @@
 		btnTrain = document.getElementById("btnTrain");
 		btnNextMemo  = document.getElementById("btnNextMemo");
 		btnNextQst   = document.getElementById("btnNextQst");
+		divSelTopic = document.getElementById("divTopicSelector");
+		divTopic = document.getElementById("divTopic");
+		selector = document.getElementById("topicSelector");
 		//JS INIT
 		posRe = 0;
 		posTr = 0;
 		topic = 0;
-		//LOAD CARDS
-		cards = [{"tgt":"I ate [eɪt] in the morning",
-					"ntv":"Я ел утром",
-					"qst" : "I ... in the morning",
-					"answers":["ate"],
-					"img":"ate2.png"},
-				{"tgt":"I ran [ræn] yesterday",
-					"ntv":"Я бегал вчера",
-					"qst" : "I ... yesterday",
-					"answers":["ran"],
-					"img": "ran2.png"}];
 		//ENTRY POINT
-		document.onload = loadLesson();
-		//FUNCTIONS
+		function loadSelectedTopic() {
+			divSelTopic.style="display: none";
+			divTopic.style="display: block";
+			path_to_load = selector.value+".js"
+			console.log(path_to_load);
+			include(path_to_load,function(){
+				//console.log();
+				loadLesson();
+			});
+			
+		}
 		function loadLesson() {
 			tgtLng.innerText = cards[posRe].tgt;
 			ntvLng.innerText = cards[posRe].ntv;
@@ -104,5 +114,12 @@
 			}
 			return false;
 		}
+		include = function (url, fn) {
+			var e = document.createElement("script");
+			e.onload = fn;
+			e.src = url;
+			e.async=true;
+			document.getElementsByTagName("head")[0].appendChild(e);
+		};
 	</script>
 </html>
